feat: include lit-element support using webpack and babel-loader

--- a/tests/dummy/app/elements.html
+++ b/tests/dummy/app/elements.html
@@ -1,1 +1,2 @@
 <link rel="import" href="../../../bower_components/vaadin-material-theme/vaadin-date-picker.html">
+<link rel="import" href="./elements/imports.html">
